--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -1,23 +1,25 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Todo list</title>
-  </head>
-  <body>
-    <a href="/todos/new">New</a>
-    <ul>
+<h1>TODOs</h1>
+<a href="/todos/new" class="btn btn-primary pull-right">New</a>
+<table class="table table-striped table-hover">
+  <thead>
+    <th>Title</th>
+    <th>Description</th>
+    <th>Action</th>
+  </thead>
+  <tbody>
     <% todos.each do |todo| %>
-      <li>
+    <tr>
+      <td>
         <a href="/todos/<%= todo.id %>/edit"><%= todo.title%></a>
+      </td>
+      <td><%= todo.description.gsub(/\r\n/, "<br> ") %></td>
+      <td>
         <form class="" action="/todos/<%= todo.id %>" method="post">
-          <input type="hidden" name="_method" value="delete" />
-          <button type="submit" name="button">Delete</button>
+          <input type="hidden" name="_method" value="delete"/>
+          <button type="submit" name="button" class="btn btn-link">Delete</button>
         </form>
-        <br>
-        <%= todo.description.gsub(/\r\n/, "<br> ") %>
-      </li>
+      </td>
+    </tr>
     <% end %>
-  </ul>
-  </body>
-</html>
+  </tbody>
+</table>
