--- a/lib/views/new.erb
+++ b/lib/views/new.erb
@@ -1,15 +1,15 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>New Todo</title>
-  </head>
-  <body>
-    <h1>New Todo</h1>
-    <form class="" action="/todos" method="post">
-      <input type="text" name="title" value=""><br>
-      <textarea name="description" rows="8" cols="40"></textarea><br>
-      <button type="submit" name="button">submit</button>
-    </form>
-  </body>
-</html>
+<h2>New Todo</h2>
+<form class="col-xs-12 col-sm-10 col-md-8" action="/todos" method="post">
+  <div class="form-group">
+    <label for="input_title">Title</label>
+    <input id="input_title" type="text" name="title" class="form-control" autofocus>
+  </div>
+  <div class="form-group">
+    <label for="input_description">Description</label>
+    <textarea id="input_description" name="description" rows="8" cols="40" class="form-control"></textarea><br>
+  </div>
+  <div class="form-group">
+    <button type="submit" name="button" class="btn btn-primary">Save</button>
+    <a href="/todos" class="btn btn-link">Cancel</a>
+  </div>
+</form>
