Add status, some js function
- status: done, not-yet.
- js: Confirm deleted, change status

--- a/lib/views/layout.erb
+++ b/lib/views/layout.erb
@@ -13,6 +13,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-sm-10 col-md-10 col-lg-10">
+        <h1>TODOs<%= %q{<a href="/todos/new" class="btn btn-lg btn-primary pull-right" role="button">New</a>} if index %></h1>
         <%= yield %>
       </div>
     </div>
