--- a/lib/views/edit.erb
+++ b/lib/views/edit.erb
@@ -1,16 +1,2 @@
-<h2>Edit Todo</h2>
-<form action="/todos/<%= todo.id %>" method="post" class="col-xs-12 col-sm-10 col-md-8">
-  <div class="form-group">
-    <label for="input_title">Title</label>
-    <input id="input_title" type="text" name="title" value="<%= todo.title %>" class="form-control" autofocus>
-  </div>
-  <div class="form-group">
-    <label for="input_description">Description</label>
-    <textarea id="input_description" name="description" rows="8" cols="40" class="form-control"><%= todo.description %></textarea><br>
-  </div>
-  <div class="form-group">
-    <input type="hidden" name="_method" value="put">
-    <button type="submit" name="button" class="btn btn-primary">Save</button>
-    <a href="/todos" class="btn btn-link">Cancel</a>
-  </div>
-</form>
+<h3>Edit Todo</h3>
+<%= yield %>
