--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -1,25 +1,28 @@
-<h1>TODOs</h1>
-<a href="/todos/new" class="btn btn-primary pull-right">New</a>
-<table class="table table-striped table-hover">
+<p>
+  <a href="#" class="pull-right">Show done</a>
+</p>
+<table class="table table-striped table-hover table-bordered">
   <thead>
-    <th>Title</th>
-    <th>Description</th>
-    <th>Action</th>
+    <th></th>
+    <th class="text-center">Title</th>
+    <th class="text-center">Action</th>
   </thead>
   <tbody>
     <% todos.each do |todo| %>
     <tr>
-      <td>
-        <a href="/todos/<%= todo.id %>/edit"><%= todo.title%></a>
+      <td class="text-center">
+        <input type="checkbox" name="<%= todo.id %>">
       </td>
-      <td><%= todo.description.gsub(/\r\n/, "<br> ") %></td>
       <td>
-        <form class="" action="/todos/<%= todo.id %>" method="post">
+        <a href="/todos/<%= todo.id %>/edit"><%= todo.title%></a><br><small><%= todo.description %></small>
+      <td class="text-center">
+        <form action="/todos/<%= todo.id %>" method="post">
           <input type="hidden" name="_method" value="delete"/>
-          <button type="submit" name="button" class="btn btn-link">Delete</button>
+          <button name="btn_delete" type="submit" class="btn btn-link">Delete</button>
         </form>
       </td>
     </tr>
     <% end %>
   </tbody>
 </table>
+<script src="/js/application.js"> </script>
