--- a/lib/views/new.erb
+++ b/lib/views/new.erb
@@ -1,15 +1,2 @@
-<h2>New Todo</h2>
-<form class="col-xs-12 col-sm-10 col-md-8" action="/todos" method="post">
-  <div class="form-group">
-    <label for="input_title">Title</label>
-    <input id="input_title" type="text" name="title" class="form-control" autofocus>
-  </div>
-  <div class="form-group">
-    <label for="input_description">Description</label>
-    <textarea id="input_description" name="description" rows="8" cols="40" class="form-control"></textarea><br>
-  </div>
-  <div class="form-group">
-    <button type="submit" name="button" class="btn btn-primary">Save</button>
-    <a href="/todos" class="btn btn-link">Cancel</a>
-  </div>
-</form>
+<h3>New Todo</h3>
+<%= yield %>
